# tacky

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  flake.nix  justfile
.github/workflows/: ci.yml
src/: main.rs
