[package]
name = "tacky"
version = "0.1.0"
edition = "2024"
description = "a CLI to manage the macOS pasteboard"

[dependencies]
clap = { version = "4", features = ["derive"] }
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSArray", "NSData"] }
objc2-app-kit = { version = "0.3", features = ["NSPasteboard", "NSPasteboardItem"] }
